src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/GL_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GL_StringErrorContext.class */
public final class GL_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("create()V", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("create(Ljava/lang/String;)V", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("create(Lorg/lwjgl/system/FunctionProvider;)V", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("destroy()V", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("getFunctionProvider()Lorg/lwjgl/system/FunctionProvider;", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("setCapabilities(Lorg/lwjgl/opengl/GLCapabilities;)V", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("getCapabilities()Lorg/lwjgl/opengl/GLCapabilities;", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("getCapabilitiesWGL()Lorg/lwjgl/opengl/WGLCapabilities;", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("getCapabilitiesGLX()Lorg/lwjgl/opengl/GLXCapabilities;", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("createCapabilities()Lorg/lwjgl/opengl/GLCapabilities;", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("createCapabilities(Ljava/util/function/IntFunction;)Lorg/lwjgl/opengl/GLCapabilities;", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("createCapabilities(Z)Lorg/lwjgl/opengl/GLCapabilities;", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("createCapabilities(ZLjava/util/function/IntFunction;)Lorg/lwjgl/opengl/GLCapabilities;", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("createCapabilitiesWGL()Lorg/lwjgl/opengl/WGLCapabilities;", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("createCapabilitiesGLX(J)Lorg/lwjgl/opengl/GLXCapabilities;", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        methods.put("createCapabilitiesGLX(JI)Lorg/lwjgl/opengl/GLXCapabilities;", "net/labymod/core/laby3d/opengl/error/generated/GLErrorContext");
        return methods;
    }
}
